base/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.io/ingress-backend: traefik.io/v1alpha1
spec:
  ingressClassName: traefik
  rules:
  - host: kuma.oostrandpark.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
  tls:
  - hosts:
    - kuma.oostrandpark.com
    secretName: uptime-kuma-tls
