base/uptime-kuma/kuma2-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-external
  namespace: uptime-kuma
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kuma2.oostrandpark.com
    secretName: kuma2-tls
  rules:
  - host: kuma2.oostrandpark.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
